fixed alignment of text and links on home apge

--- a/src/style_sheets/_home.scss
+++ b/src/style_sheets/_home.scss
@@ -24,7 +24,7 @@
     h1{
       position: absolute;
       bottom: 20%;
-      left: 10%;
+      left: 18vw;
       color: $snow;
       font-size: 9em;
       line-height: 1em;
